Fixed text overflow for desktop icons

--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,10 @@ span[class^="material-icons"]
 {
     display: grid;
     grid-template-columns: repeat(auto-fit, 64px);
-    grid-template-rows: repeat(auto-fit, 64px);
+    grid-template-rows: repeat(auto-fit, 84px);
     height: 100vh;
     width: 100vw;
-    gap: 10px;
+    gap: 0.5rem;
     padding: 10px;
 }
 
